--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Karla&display=swap");
 * {
     box-sizing: border-box;
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-        sans-serif;
+    font-family: "Karla", sans-serif;
 }
 
 *::selection {
@@ -10,21 +10,15 @@
 
 :root {
     --primary: rgb(255, 0, 128);
-
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-        sans-serif;
 }
 
 body {
-    /* background-color: rgb(49, 49, 49); */
     background-color: rgb(0, 0, 0);
 }
 
 header {
-    /* border: 2px solid var(--primary); */
     border-block: 2px solid var(--primary);
     width: 100%;
-
     margin-bottom: 1rem;
     padding-block: 0.5rem;
     padding-inline: 2rem;
@@ -59,9 +53,7 @@ h1 {
 nav a {
     all: unset;
     cursor: pointer;
-    /* font-size: 2rem; */
     font-size: min(2vw, 2em);
-
     text-transform: uppercase;
     letter-spacing: 0.3rem;
     color: white;
@@ -112,14 +104,6 @@ nav a:hover:before {
     display: flex;
     gap: 1rem;
 }
-
-/* main,
-aside {
-    display: grid;
-    place-items: center;
-    font-size: 3rem;
-    color: white;
-} */
 
 aside {
     border: 2px solid var(--primary);
@@ -294,7 +278,7 @@ form textarea {
     background-color: var(--primary);
 }
 
-/* EXPERIMENTING WITH CARUOUSEL SFSF */
+/* EXPERIMENTING WITH CARUOUSEL  */
 
 .carousel {
     height: 100%;
@@ -313,7 +297,7 @@ form textarea {
 .carousel::-webkit-scrollbar-thumb {
     background-color: var(--primary);
 }
-.one {
+.project {
     height: 100%;
     width: 100%;
     display: flex;
@@ -325,20 +309,16 @@ form textarea {
     overflow: hidden;
 }
 
+.one {
+    background-color: royalblue;
+}
+
 .one img {
     height: 80%;
 }
 
 .two {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-color: crimson;
-    scroll-snap-align: center;
-    flex-shrink: 0;
-    overflow: hidden;
 }
 
 .two img {
@@ -346,15 +326,7 @@ form textarea {
 }
 
 .three {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-color: darkorange;
-    scroll-snap-align: center;
-    flex-shrink: 0;
-    overflow: hidden;
 }
 
 .three img {
@@ -459,7 +431,7 @@ form textarea {
     opacity: 100%;
 }
 
-@media (max-width: 720px) {
+@media (max-width: 760px) {
     header {
         flex-direction: column;
     }
@@ -476,6 +448,10 @@ form textarea {
     }
 
     .aside-skillset {
+        flex-basis: auto;
+    }
+
+    .aside-education {
         flex-basis: auto;
     }
 }
